Support password_hash for Change Password API
This change adds support for a password_hash field in the request
body of the Change Password API. Clients can use this to pre-hash
the password when making a change password request.